[package]
name = "mobius_bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
nanoid = "0.4.0"
tokio = {version = "1",features = ["full"]}
thiserror = "1.0.58"
bytes = "1.5.0"
crc = "3.0.1"
serde = { version = "1.0.197", features = ["derive"] }


